<resources>
    <string name="app_name">Budget Moniter</string>
    <string name="budget_baba">Budget Baba</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="_0000">0000</string>
    <string name="staring_balance">Staring Balance :</string>
    <string name="ending_balancce">Ending Balancce</string>
    <string name="transactions">Transactions</string>
    <string name="ending_balance" />
    <string name="plus_symbol">+</string>
    <string name="_000">000</string>
    <string name="zero">000</string>
    <string name="welcome">Welcome</string>
    <string name="reset">Reset</string>
    <string name="current_balance">Current Balance :</string>
    <string name="total_expense">Total Income</string>
    <string name="total__expense">Total Expense</string>
    <string name="total_income">Total Income</string>
</resources>