<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <!-- Header Layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Title and Reset Button -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/budget_baba"
            android:id="@+id/header_title"
            android:textSize="35sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:text="@string/reset"
            android:layout_alignStart="@+id/header_title"
            android:layout_marginVertical="10sp"
            android:layout_marginStart="280sp"
            android:id="@+id/reset"
            android:textSize="8sp"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp" />

    </RelativeLayout>

    <!-- Header Bar -->
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#C927F6"
        android:layout_marginHorizontal="20dp"
        android:id="@+id/header_bar" />

    <!-- Current Balance Layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50sp">

        <!-- Current Balance -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="11sp"
            android:layout_marginStart="20sp"
            android:text="@string/current_balance"
            android:textSize="18sp"
            android:id="@+id/current_balance" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/current_balance_num"
            android:layout_alignStart="@+id/current_balance"
            android:textSize="18sp"
            android:layout_marginStart="156sp"
            android:layout_marginVertical="11sp" />

    </RelativeLayout>

    <!-- Total Income Layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50sp">

        <!-- Total Income -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="11sp"
            android:layout_marginStart="20sp"
            android:text="Total Income : "
            android:textSize="18sp"
            android:id="@+id/total_income" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/total_income_num"
            android:layout_alignStart="@+id/total_income"
            android:textSize="18sp"
            android:layout_marginStart="156sp"
            android:layout_marginVertical="11sp" />

    </RelativeLayout>

    <!-- Total Expense Layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50sp">

        <!-- Total Expense -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="11sp"
            android:layout_marginStart="20sp"
            android:text="Total Expense : "
            android:textSize="18sp"
            android:id="@+id/total_expense" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/total_expense_num"
            android:layout_alignStart="@+id/total_expense"
            android:textSize="18sp"
            android:layout_marginStart="156sp"
            android:layout_marginVertical="11sp" />

    </RelativeLayout>

    <!-- Transactions -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transactions"
        android:textStyle="bold"
        android:textSize="23sp"
        android:layout_marginStart="20sp"
        android:id="@+id/transactions_text"
        android:layout_marginTop="10dp" />

    <!-- Transactions List -->
    <ListView
        android:id="@+id/transactions_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp" />

    <!-- Plus Symbol Button -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus_symbol"
        android:textSize="40sp"
        android:id="@+id/newtransaction"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp" />

</LinearLayout>
